# Indian_Sign_Language-Text

./: Capture-Image.py  Indian_Sign_Language-Model.ipynb  README.md  class_indices_letter.json  keras_model.h5  labels.txt  pyproject.toml  test.py
