[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = ">=3.12"
keras = "^3.5.0"
opencv-python = "^4.10.0.84"
tensorflow = "^2.17.0"
cvzone = "^1.6.1"
mediapipe = "^0.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"